--- a/manifest.json
+++ b/manifest.json
@@ -69,5 +69,8 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "h5" : {
+        "template" : "index.html"
+    }
 }
